# usbws-poco

./: README  cleanup.sh  configure.ac
doc/: usbws.8
os/win32/: BUILD  copy_usbws_to_win32.sh
src/: Makefile.am  USBWSCommand.cpp  USBWSCommand.h  USBWSDaemon.cpp  USBWSDaemon.h  USBWSRequestHandler.cpp  USBWSRequestHandler.h  USBWSRequestHandlerFactory.cpp  USBWSRequestHandlerFactory.h  USBWSUtil.h  USBWSWebSocket.cpp  USBWSWebSocket.h
